--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>下载我们的应用</h1>
         <p id="message">请在浏览器中打开此页面以下载应用。</p>
         <a id="downloadLink"
-            href="https://zentao.sangwocloud.top/zentao/file-download-8554.html?zentaosid=432697347640862867c3294ca5404a34"
+            href="http://zentao.sangwocloud.top/zentao/file-download-8554.html?zentaosid=432697347640862867c3294ca5404a34"
             download="物资管理.apk" style="display: none;">立即下载</a>
         <script>
             function isWeixinBrowser() {
