--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
         <img class=" long-press-able-img " src="./1024x1024.png" alt="应用图标">
         <h1>下载我们的应用</h1>
         <p id="message">请在浏览器中打开此页面以下载应用。</p>
-        <a id="downloadLink"
-            href="http://zentao.sangwocloud.top/zentao/file-download-8554.html?zentaosid=432697347640862867c3294ca5404a34"
-            download="物资管理.apk" style="display: none;">立即下载</a>
+        <a id="downloadLink" href="./__UNI__511A179__20241024191951.apk" download="物资管理.apk"
+            style="display: none;">立即下载</a>
         <script>
             function isWeixinBrowser() {
                 var userAgent = navigator.userAgent.toLowerCase();
